[package]
name = "wf_overlay"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["laund <me@laund.moe>"]
readme = "README.md"
repository = "https://github.com/laundmo/wf_overlay"

[dependencies]
anyhow = "1.0.100"
bevy = { version = "0.17", features = ["wayland", "serialize"] }
crossbeam-channel = "*"
image = "0.25.9"
ocrs = '0.12'
rten = "0.24"
rten-tensor = "0.24"
serde = { version = "1.0.228", default-features = false }
simsearch = "0.3.0"
bevy_mod_req = { version = "0.1.1", git = "https://codeberg.org/laund/bevy_mod_req.git", features = [
    "ratelimit",
] }
serde_json_any_key = "2.0.0"
evdev = { git = "https://github.com/alpitol/evdev.git", branch = "main", features = [
    "async-io",
] }
futures-lite = "2.6.1"
serde_json = "1.0.148"
ureq = { version = "3.1.4", default-features = false }
winit = { version = "0.30.12", default-features = false }
toml_edit = { version = "0.24.0", features = ["serde"] }
jiff = "0.2.17"


[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.12.0", default-features = false, features = [
    "async-std",
] }
pipewire = "0.9.2"

# waycap-rs = "^2.1.2"
# bevy_simple_subsecond_system = { version = "*", optional = true }

# [patch.'https://github.com/rustdesk-org/rust-webm']
# rust-webm = { git = ""}

[features]
#dev = ["dep:bevy_simple_subsecond_system"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.profiling]
inherits = "release"
debug = true
